--- a/public/pages/devoir-main.html
+++ b/public/pages/devoir-main.html
@@ -10,6 +10,8 @@
   <h1>Devoir</h1>
   <ul>
       <li><a href="/devoir/devoir-m2-transinfo">Bidirectionally Code-Words</a></li>
+      <li><a href="/devoir/projet-annuel-recordjs">WebRecorder</a></li>
+      <li><a href="/devoir/tp-lzw">TransInfo-TP-LZW</a></li>
   </ul>
 </body>
 </html>
