try to get pic in CV

--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
     <script src="../libs/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
-    <script src="../CV-model/static/js/script.js"></script>
+    <script src="public/CV-model/static/js/script.js"></script>
 </head>
 
 <body style="padding-right: 0px;">
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(&quot;../CV-model/img/id.JPG&quot;);"></div>
+                <div class="portrait" style="background-image: url(&quot;images/id.JPG&quot;);"></div>
                 
                 <h1 id="username" contenteditable="true">Xicun HAN<br></h1>
                 <h4 id="persona-tag" contenteditable="true">Informaticien &amp; Linguiste<br></h4>
