fix affichage picture

--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -15,7 +15,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(&quot;public/images/id.JPG&quot;);"></div>
+                <div class="portrait" style="background-image: url(&quot;../images/id.JPG&quot;);"></div>
                 
                 <h1 id="username" contenteditable="true">Xicun HAN<br></h1>
                 <h4 id="persona-tag" contenteditable="true">Informaticien &amp; Linguiste<br></h4>
@@ -45,7 +45,7 @@
                     <li>
                         <label class="left-label" contenteditable="true">Email</label><span class="label-value" contenteditable="true">xicun.han@gmail.com</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Home Page</label><span class="label-value" contenteditable="true">realself.one</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Home Page</label><span class="label-value" contenteditable="true">a-real.me</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Github</label><span class="label-value" contenteditable="true">github.com/aliciahan</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
