--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
     <script src="../libs/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.min.js"></script>
-    <script src="public/CV-model/static/js/script.js"></script>
+    <!--<script src="public/CV-model/static/js/script.js"></script>-->
 </head>
 
 <body style="padding-right: 0px;">
@@ -45,7 +45,7 @@
                     <li>
                         <label class="left-label" contenteditable="true">Email</label><span class="label-value" contenteditable="true">xicun.han@gmail.com</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Home Page</label><span class="label-value" contenteditable="true">realself.one</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Home Page</label><span class="label-value" contenteditable="true">a-real.me</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Github</label><span class="label-value" contenteditable="true">github.com/aliciahan</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
