--- a/public/pages/main-page.html
+++ b/public/pages/main-page.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>a-real.me - Welcome</title>
 
+
+
+    <!--<script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../libs/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../libs/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+-->
     <link rel="stylesheet" type="text/css" href="../stylesheets/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../stylesheets/main-page-css.css" />
-
 
     <!--[if IE]>
     <script >
@@ -34,6 +39,77 @@
     </div>
 </div>-->
 <!-- /container -->
+<nav id="personalnavbar">
+    <ul>
+        <li>
+            <a href="#">Here to Start</a>
+            <ul>
+                <li><a href="devoir-main.html">Devoir</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="cv">About ME(CV)</a>
+        </li>
+    </ul>
+</nav>
+
+<style>
+    #personalnavbar{
+        background-color:#7f8c8d;
+        opacity:0.9;
+        margin:0;
+        overflow:hidden;
+    }
+    nav ul{
+        margin:0;
+        padding:0;
+        display: inline;
+
+    }
+    nav ul li{
+        display: inline-block;
+    }
+    nav ul li:hover {
+        background-color :lightgrey;
+    }
+    nav ul li:hover ul{
+        display: block;
+    }
+
+    nav ul li ul {
+        position: absolute;
+        display: none;
+    }
+
+    nav ul li ul li{
+        background: gainsboro;
+        display : block;
+    }
+
+    nav ul li a {
+        color:antiquewhite;
+        background-color: transparent;
+        display: inline-block;
+        line-height:2em;
+        padding : 0.5em 0.5em;
+        text-decoration: none;
+    }
+
+
+
+    nav ul li ul li a{
+        color: antiquewhite;
+        display: block !important;
+        line-height:2em;
+        padding: 0.5em 2em;
+        text-decoration : none;
+    }
+    nav ul li ul li:hover {
+        background:#e6e6e6;
+    }
+
+
+</style>
 
 <div class="container demo-3">
     <div class="content">
