add force graphe of skills

--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title" contenteditable="true">IT Skills</span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
+                <h2 class="info-header"><a href="/cv/force"><i class="iconfont icon-build"></i></a><span class="info-title" contenteditable="true">IT Skills</span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
@@ -87,7 +87,7 @@
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     
                     <li>
-                        <label class="left-label" contenteditable="true">Web</label><span class="label-value" contenteditable="true">Html5/CSS3, javascript, AngularJS, JQuery, noodJS, Express, MongoDB, MySQL</span>
+                        <label class="left-label" contenteditable="true">Web Service</label><span class="label-value" contenteditable="true">Html5/CSS3, javascript, AngularJS, JQuery, noodJS, Express, MongoDB, MySQL, J2E</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                         <label class="left-label" contenteditable="true">Administration Système</label><span class="label-value" contenteditable="true">Linux Administration, Linux Server Setup and Maintain</span>
