adding blog link to main page

--- a/public/pages/main-page.html
+++ b/public/pages/main-page.html
@@ -50,6 +50,9 @@
         <li>
             <a href="cv">About ME(CV)</a>
         </li>
+        <li>
+            <a href="http://a-real.me/blog">My Blog</a>
+        </li>
     </ul>
 </nav>
 
