--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -30,7 +30,7 @@
                     <li>
                         <label class="left-label" contenteditable="true">Prénom</label><span class="label-value" contenteditable="true">Xicun</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Age</label><span class="label-value" contenteditable="true">29 ans</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Age</label><span class="label-value" contenteditable="true">30 ans</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Sexe</label><span class="label-value" contenteditable="true">TransGendre : MTF</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 <li>
@@ -77,23 +77,29 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label" contenteditable="true">Cisco</label><span class="label-value" contenteditable="true">IOS(Internet Operation System) Routage et Switch</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Cisco</label><span class="label-value" contenteditable="true">Route & Switch</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
-                        <label class="left-label" contenteditable="true">Programme</label><span class="label-value" contenteditable="true">Python, C, C++, Java,&nbsp;</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Programme</label><span class="label-value" contenteditable="true">Python, C, C++, Java, Javascript, shell scripting&nbsp;</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
-                        <label class="left-label" contenteditable="true">Data<br></label><span class="label-value" contenteditable="true">R, Python(sk-learn Data Digging)</span>
+                        <label class="left-label" contenteditable="true">Data<br></label><span class="label-value" contenteditable="true">R, Python(sk-learn, etc)</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
-                        <label class="left-label" contenteditable="true">Web Service</label><span class="label-value" contenteditable="true">Html5/CSS3, javascript, AngularJS, JQuery, noodJS, Express, MongoDB, MySQL, J2E</span>
-                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
-                        <li>
-                        <label class="left-label" contenteditable="true">Administration Système</label><span class="label-value" contenteditable="true">Linux Administration, Linux Server Setup and Maintain, Docker, K8s, Shell</span>
+                        <label class="left-label" contenteditable="true">Web Service</label><span class="label-value" contenteditable="true">J2E, Html5/CSS3, javascript, AngularJS, NodeJS, Express, MongoDB, MySQL</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                        <label class="left-label" contenteditable="true">Office</label><span class="label-value" contenteditable="true">Word, Excel, PowerPoint, LaTex, Evernote, Markdown</span>
+                        <label class="left-label" contenteditable="true">System Admin</label><span class="label-value" contenteditable="true">RHEL, Ubuntu, Alpine, CentOS, FreeBSD, Debian </span>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                        <label class="left-label" contenteditable="true">Monitoring</label><span class="label-value" contenteditable="true">ELK, influxDB, Prometheus, grafana, zabbix, collectd</span>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                        <label class="left-label" contenteditable="true">PAAS/CAAS</label><span class="label-value" contenteditable="true">Docker, Docker-compose, Swarm, Kubernete; Hyper-V, Vmware  </span>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                        <label class="left-label" contenteditable="true">CI/CD</label><span class="label-value" contenteditable="true">Jenkins</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                         <li>
@@ -135,7 +141,7 @@
                         <p contenteditable="true">En temps plein. CI/CD, dockerlisation, microservice orchestration. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <h3 contenteditable="true">Restaurant Royal Mondeville - Serveur &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2013-2015<br></h3>
+                        <h3 contenteditable="true">Restaurant Royal Mondeville - Serveuse &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2013-2015<br></h3>
                         <p contenteditable="true">En temps partiel pendant 2 ans, rendre services aux clients, construire et maintenir les relations clientèles. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
