--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -137,8 +137,12 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
+                        <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
+                        <p contenteditable="true">En temps plein. Cloud Computing, Container Orchestration with Public/private Cloud Platform. <br></p>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <li>
                         <h3 contenteditable="true">SAP Labs FRANCE - Stage DEV/OPS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Mars 2017 - Sept. 2017<br></h3>
-                        <p contenteditable="true">En temps plein. CI/CD, dockerlisation, microservice orchestration. <br></p>
+                        <p contenteditable="true">En temps plein. CI/CD, containerlization with docker , microservice orchestration. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">Restaurant Royal Mondeville - Serveuse &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2013-2015<br></h3>
@@ -185,7 +189,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">Master Informatique en E-Sécure (à venir)<br></h3>
+                        <h3 contenteditable="true">Master Informatique en E-Sécure <br></h3>
                         <p contenteditable="true"><br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
@@ -197,12 +201,11 @@
                         <p contenteditable="true"><br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
             <li>
-                        <h3 contenteditable="true">IELTS 6.0<br></h3>
+                        <h3 contenteditable="true">IELTS 6.0(EN) && DALF C1(FR) <br></h3>
                         <p contenteditable="true"><br></p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
-                        <h3 contenteditable="true">DALF C1<br></h3>
-                        <p contenteditable="true"><br></p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li></ul></div>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+
+                </ul></div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title" contenteditable="true">Self Evaluation: </span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
