--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -137,7 +137,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
+                        <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
                         <p contenteditable="true">En temps plein. Cloud Computing, Container Orchestration with Public/private Cloud Platform. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
