--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -77,26 +77,31 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label" contenteditable="true">Cisco</label><span class="label-value" contenteditable="true">Route & Switch</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Network,Infra</label><span class="label-value" contenteditable="true">Route & Switch</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
-                        <label class="left-label" contenteditable="true">Programme</label><span class="label-value" contenteditable="true">Python, C, C++, Java, Javascript, shell scripting&nbsp;</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Programme</label><span class="label-value" contenteditable="true">Shell,Python,C++,Java,Javascript&nbsp;</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
-                        <label class="left-label" contenteditable="true">Data<br></label><span class="label-value" contenteditable="true">R, Python(sk-learn, etc)</span>
+                        <label class="left-label" contenteditable="true">Data Analysis<br></label><span class="label-value" contenteditable="true">R, Python</span>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <li>
+                        <label class="left-label" contenteditable="true">Data Storage<br></label><span class="label-value" contenteditable="true"> MYSQL, Oracle, MongoDB, Hadoop(HDFS)</span>
+                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span>
+                    </li>
+
+                    <li>
+                        <label class="left-label" contenteditable="true">Web</label><span class="label-value" contenteditable="true">J2E, Html5/CSS3, javascript, AngularJS, NodeJS, Express</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
-                    <li>
-                        <label class="left-label" contenteditable="true">Web Service</label><span class="label-value" contenteditable="true">J2E, Html5/CSS3, javascript, AngularJS, NodeJS, Express, MongoDB, MySQL</span>
-                        <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                        <label class="left-label" contenteditable="true">System Admin</label><span class="label-value" contenteditable="true">RHEL, Ubuntu, Alpine, CentOS, FreeBSD, Debian </span>
+                        <label class="left-label" contenteditable="true">System Admin</label><span class="label-value" contenteditable="true">RHEL, Ubuntu, Alpine </span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                         <label class="left-label" contenteditable="true">Monitoring</label><span class="label-value" contenteditable="true">ELK, influxDB, Prometheus, grafana, zabbix, collectd</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                        <label class="left-label" contenteditable="true">PAAS/CAAS</label><span class="label-value" contenteditable="true">Docker, Docker-compose, Swarm, Kubernete; Hyper-V, Vmware  </span>
+                        <label class="left-label" contenteditable="true">Cloud Computing</label><span class="label-value" contenteditable="true">Docker, Docker-compose, Swarm, Kubernete, GCloud, VMTec  </span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                         <label class="left-label" contenteditable="true">CI/CD</label><span class="label-value" contenteditable="true">Jenkins</span>
@@ -137,7 +142,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
+                        <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
                         <p contenteditable="true">En temps plein. Cloud Computing, Container Orchestration with Public/private Cloud Platform. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
