--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -77,7 +77,7 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label" contenteditable="true">Network,Infra</label><span class="label-value" contenteditable="true">Route & Switch</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Infra,Network</label><span class="label-value" contenteditable="true">Route & Switch, Ansible, Terraform</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 
                     <li>
                         <label class="left-label" contenteditable="true">Programme</label><span class="label-value" contenteditable="true">Shell,Python,C++,Java,Javascript&nbsp;</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
@@ -86,7 +86,7 @@
                         <label class="left-label" contenteditable="true">Data Analysis<br></label><span class="label-value" contenteditable="true">R, Python</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Data Storage<br></label><span class="label-value" contenteditable="true"> MYSQL, Oracle, MongoDB, Hadoop(HDFS)</span>
+                        <label class="left-label" contenteditable="true">Data Storage<br></label><span class="label-value" contenteditable="true"> MYSQL, Oracle, MongoDB; Hadoop, Ceph, GlusterFS</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span>
                     </li>
 
@@ -98,10 +98,10 @@
                         <label class="left-label" contenteditable="true">System Admin</label><span class="label-value" contenteditable="true">RHEL, Ubuntu, Alpine </span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                        <label class="left-label" contenteditable="true">Monitoring</label><span class="label-value" contenteditable="true">ELK, influxDB, Prometheus, grafana, zabbix, collectd</span>
+                        <label class="left-label" contenteditable="true">Monitoring</label><span class="label-value" contenteditable="true">ELK, influxDB, Prometheus, grafana, zabbix, Nagios etc.</span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
-                        <label class="left-label" contenteditable="true">Cloud Computing</label><span class="label-value" contenteditable="true">Docker, Docker-compose, Swarm, Kubernete, GCloud, VMTec  </span>
+                        <label class="left-label" contenteditable="true">Cloud Computing</label><span class="label-value" contenteditable="true">Docker, Docker-compose, Swarm, Kubernete, Google Cloud  </span>
                         <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                         <label class="left-label" contenteditable="true">CI/CD</label><span class="label-value" contenteditable="true">Jenkins</span>
