--- a/public/pages/cv-main.html
+++ b/public/pages/cv-main.html
@@ -30,7 +30,7 @@
                     <li>
                         <label class="left-label" contenteditable="true">Prénom</label><span class="label-value" contenteditable="true">Xicun</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">Age</label><span class="label-value" contenteditable="true">30 ans</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">Age</label><span class="label-value" contenteditable="true">31 ans</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">Sexe</label><span class="label-value" contenteditable="true">TransGendre : MTF</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 <li>
@@ -142,16 +142,16 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
+                        <h3 contenteditable="true">Ysance - Cloud TechOps &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2018-Now<br></h3>
+                        <p contenteditable="true">En temps partiel pendant 2 ans, rendre services aux clients, construire et maintenir les relations clientèles. <br></p>
+                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <li>
                         <h3 contenteditable="true">SAP Labs FRANCE - Junior DEV &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Oct 2017 - Feb. 2018<br></h3>
                         <p contenteditable="true">En temps plein. Cloud Computing, Container Orchestration with Public/private Cloud Platform. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">SAP Labs FRANCE - Stage DEV/OPS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Mars 2017 - Sept. 2017<br></h3>
                         <p contenteditable="true">En temps plein. CI/CD, containerlization with docker , microservice orchestration. <br></p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
-                    <li>
-                        <h3 contenteditable="true">Restaurant Royal Mondeville - Serveuse &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 2013-2015<br></h3>
-                        <p contenteditable="true">En temps partiel pendant 2 ans, rendre services aux clients, construire et maintenir les relations clientèles. <br></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">New Oriental - Enseignant Anglais&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2010-2011<br></h3>
