--- a/public/pages/main-page.html
+++ b/public/pages/main-page.html
@@ -51,7 +51,7 @@
             <a href="cv">About ME(CV)</a>
         </li>
         <li>
-            <a href="http://a-real.me/blog">My Blog</a>
+            <a href="https://blog.a-real.me">My Blog</a>
         </li>
     </ul>
 </nav>
